# research-test

./: app6.py  models2.py  python.py  sonar-project.properties  test.py  test2.rs  test3.cpp  test3.rs  test5.cpp  test5.rs  utils2.py
.github/workflows/: semgrep.yml
C++/: cplus1.cpp  cplus2.cpp  cplus3.cpp  cplus4.cpp  cplus5.cpp
C++/1st/: test1.cpp
C++/2nd/: test2.cpp
C++/4th/: test4.cpp
Group1/: c1.cpp  python1.py
Group2/: c2.cpp  python2.py
Group3/: c3.cpp  python3.py
JavaScript/: javascript1.js  javascript2.js  javascript3.js  javascript4.js  javascript5.js
Python/: python1.py  python2.py  python3.py  python4.py  python5.py
Python/1st/: app1.py
Python/2nd/: app2.py
Python/3rd/: app3.py
Python/4th/: app5.py
Rust/1st/: Cargo.toml  test1.rs
Rust/2nd/: Cargo.toml
Rust/3rd/: Cargo.toml
Rust/4th/: Cargo.toml  test4.rs
Rust/5th/: Cargo.toml
