[dependencies]
ring = "0.16.20"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
tokio = { version = "1", features = ["full"] }
pbkdf2 = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13.0"
rand = "0.8"
aes-gcm = "0.10"
hmac = "0.12"
