[dependencies]
bcrypt = "0.11"
aes-gcm = "0.10"
rand = "0.8"
openssl = "0.10"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
hyper-tls = "0.5"
pbkdf2 = "0.10"
hmac = "0.12"
sha2 = "0.10"
